# ViennaPS

./: .clang-format  .cmake-format  .gitignore  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  GPU_Benchmark.txt  LICENSE  MANIFEST.in  NOTICE.txt  README.md  THIRD_PARTY_LICENSES.md  ewqe  format-project.sh  pyproject.toml  release.txt  run_simulations.py  setup.py  test_dashboard.html  vcpkg.json  viennaps_showcase.py  widget_test.html
Examples/: CMakeLists.txt
Examples/3D_NAND_via_etching/: 3D_NAND_via_etching.cpp  CMakeLists.txt  geometryFactory.hpp  particles.hpp  surfaceModel.hpp  velocityField.hpp
Examples/CORE_process/: CMakeLists.txt  CORE_process.cpp  geometryFactory.hpp  particles.hpp  surfaceModel.hpp  velocityField.hpp
Examples/CantileverWetEtching/: CMakeLists.txt  CantileverWetEtching.cpp  CantileverWetEtching.py
Examples/DirectionalEtching/: CMakeLists.txt  DirectionalEtching.cpp  Particle.hpp  SurfaceModel.hpp
Examples/ExampleProcess/: CMakeLists.txt  ExampleProcess.cpp  Particles.hpp  SurfaceModel.hpp  VelocityField.hpp  particles.hpp
Examples/Example_process/: CMakeLists.txt  Example_process.cpp  particles.hpp  surfaceModel.hpp  velocityField.hpp
Examples/GDSReader/: CMakeLists.txt  DirectionalEtch.hpp  Epitaxy.hpp  GDSReader.cpp  GDSReader.py  IsoDeposition.hpp  SRAM_mask.gds  box.gds  polygons.gds
Examples/HoleEtching/: CMakeLists.txt  ConfigParser.hpp  HoleEtching.cpp  HoleEtching.py  Parameters.hpp  config.txt
Examples/InterpolationDemo/: CMakeLists.txt  InterpolationDemo.cpp  griddata.csv  scatterdata.csv
Examples/InterpolationWorkflow/: AdvectionCallback.hpp  CMakeLists.txt  CreateData.cpp  DimensionExtraction.hpp  GeometryReconstruction.cpp  GeometryReconstruction.hpp  InterpolationWorkflow.cpp  Parameters.hpp  README.md  TrenchDeposition.hpp  config.txt  data.csv
Examples/KDTreeBenchmark/: CMakeLists.txt  KDTreeBenchmark.cpp
Examples/OxideRegrowth/: CMakeLists.txt  OxideRegrowth.cpp  OxideRegrowth.py  Parameters.hpp  config.txt
Examples/Redeposition/: CMakeLists.txt  MakeStack.hpp  Parameters.hpp  Redeposition.cpp
Examples/StackEtching/: CMakeLists.txt  Parameters.hpp  StackEtching.cpp  StackEtching.py  config.txt
Examples/TEOSTrenchDeposition/: CMakeLists.txt  MultiTEOS.cpp  MultiTEOS.py  MultiTEOS_config.txt  SingleTEOS.cpp  SingleTEOS.py
Examples/TrenchDeposition/: CMakeLists.txt  Parameters.hpp  TrenchDeposition.cpp  TrenchDeposition.py  config.txt
Examples/TrenchDepositionGeometric/: CMakeLists.txt  Parameters.hpp  TrenchDepositionGeometric.cpp  TrenchDepositionGeometric.py  config.txt
Examples/VolumeModel/: CMakeLists.txt  Parameters.hpp  VolumeModel.cpp  VolumeModel.py  config.txt
GPU/: CMakeLists.txt  context.hpp
GPU/app/: pscuApplication.cpp  pscuApplication.hpp
GPU/benchmark/: GPU_Benchmark.cpp
GPU/cmake/: FindOptiX.cmake  configure_optix.cmake
GPU/deviceKernels/: FluorocarbonProcessKernels.cu  SF6O2ProcessKernels.cu  translateKernels.cu
GPU/geometry/: culsToSurfaceMesh.hpp
GPU/pipelines/: DepositionPipeline.cu  FluorocarbonPipeline.cu  SF6O2rayPipeline.cu
GPU/process/: pscuDeposition.hpp  pscuFluorocarbonEtching.hpp  pscuIonMilling.hpp  pscuProcess.hpp  pscuProcessModel.hpp  pscuSF6O2Etching.hpp  pscuSurfaceModel.hpp  pscuVolumeModel.hpp
GPU/rayTracing/: curtBoundary.hpp  curtGeometry.hpp  curtIndexMap.hpp  curtLaunchParams.hpp  curtParticle.hpp  curtPerRayData.hpp  curtRNG.hpp  curtReflection.hpp  curtSBTRecords.hpp  curtSource.hpp  curtTracer.hpp  curtUtilities.hpp
GPU/utils/: utGDT.hpp  utLog.hpp
Python/: CMakeLists.txt  __init__.py.in  pyWrap.cpp  pyWrap.hpp
Tests/: CMakeLists.txt
Tests/ConversionTable/: CMakeLists.txt  ConversionTable.cpp
Tests/Convert/: CMakeLists.txt  Convert.cpp
Tests/ConvertMulti/: CMakeLists.txt  ConvertMulti.cpp
Tests/Initialisation/: CMakeLists.txt  Initialisation.cpp
Tests/MovePointData/: CMakeLists.txt  MovePointData.cpp
Tests/MultiLSConvert/: CMakeLists.txt  MultiLSConvert.cpp
Tests/ProcessInterface/: CMakeLists.txt  ProcessInterface.cpp
Tests/RayTracer/: CMakeLists.txt  RayTracer.cpp  particle.hpp
Tests/WriteCells/: CMakeLists.txt  WriteCells.cpp
Tests/rtPlaneTest/: CMakeLists.txt  rtPlaneTest.cpp
Wrapping/Python/: CMakeLists.txt  pyWrap.cpp
app/: Application.cpp  Application.hpp  Application2D.cpp  Application3D.cpp  ApplicationParameters.hpp  ApplicationParser.hpp  CMakeLists.txt  Interrupt.hpp  README.md  SampleConfig.txt  application.cpp  application.hpp  applicationParameters.hpp  applicationParser.hpp  sampleConfig.txt
examples/: CMakeLists.txt
examples/DRAMWiggling/: CMakeLists.txt  DRAMWiggling.cpp  DRAMWiggling.py  config.txt  plotCSV.py  wiggle.gds  wiggle_full.gds  wiggle_new.gds  wiggle_new.txt
examples/Emulation/: FinFET.cpp  StackedNanowire.py
examples/FinFETEmulation/: CMakeLists.txt  FinFETEmulation.cpp
examples/GDSReader/: CMakeLists.txt  GDSReader.cpp  GDSReader.py  GDSReader2D.cpp  GDSReader2D.py  finalGrid.csv  layer0_GDSIIpolygon0.csv  layer0_GDSIIpolygon1.csv  layer0_GDSIIpolygon2.csv  layer0_GDSIIpolygon3.csv  layer0_allContours.csv  layer0_exposure.csv  layer0_finalExposure.csv  layer0_polygon0.csv  layer0_polygon1.csv  layer0_polygon2.csv  layer0_polygon3.csv  layer0_simplePolygon0.csv  layer0_simplePolygon1.csv  layer0_simplePolygon2.csv  layer0_simplePolygon3.csv  layer1_GDSIIpolygon0.csv  layer1_GDSIIpolygon1.csv  layer1_GDSIIpolygon2.csv  layer1_GDSIIpolygon3.csv  layer1_allContours.csv  layer1_exposure.csv  layer1_finalExposure.csv  layer1_polygon0.csv  layer1_polygon1.csv  layer1_polygon2.csv  layer1_polygon3.csv  layer1_simplePolygon0.csv  layer1_simplePolygon1.csv  layer1_simplePolygon2.csv  (+6 more)
gpu/: CMakeLists.txt  Dockerfile  ViennaPS_install_ubuntu.sh  ViennaTools_install_ubuntu.sh  context.hpp
python/: CMakeLists.txt  TecPlotReader.py  __init__.py  __init__.py.in  generateStubs.py  install-stubs.sh  mcpServer.py  pyModels.cpp  pyWrap.cpp  pyWrap.hpp  pyWrapDimension.hpp  pyWrap_t.cpp  testGPUDevice.py  wrapGeometries.cpp  wrapModels.cpp  wrapProcesses.cpp
tests/: CMakeLists.txt
(+1217 files in other folders)
