[build-system]
requires = ["scikit-build-core", "pybind11"]
build-backend = "scikit_build_core.build"

[project]
version = "3.5.1"
name = "ViennaPS"
readme = "README.md"
license = { file = "LICENSE" }
description = "Semiconductor fabrication process simulation library"
dependencies = ["ViennaLS>=4.3.2"]

[project.urls]
Homepage = "https://viennatools.github.io/ViennaPS/"
Documentation = "https://viennatools.github.io/ViennaPS/"
Repository = "https://github.com/ViennaTools/ViennaPS"
Issues = "https://github.com/ViennaTools/ViennaPS/issues"

[tool.scikit-build]
build-dir = "build"
cmake.args = ["-DVIENNAPS_BUILD_PYTHON=ON"]
sdist.include = ["python/viennaps3d/ptx/*"]
wheel.packages = ["python/viennaps3d", "python/viennaps2d"]